# simpleapi

./: .gitignore  404.html  CNAME  README.md  apf.py  app.py  automatic_validation.html  custom_types.py  dynamic_routing.html  example.py  features.html  first_steps.html  index.html  middleware.html  middleware.py  mkdocs.yml  pyproject.toml  request.html  request.py  response.html  response.py  routers.html  simpleapi.py  sitemap.xml
.github/workflows/: docs.yaml  mypy-typecheck.yml  run-tests.yml
docs/: automatic_validation.md  dependency_injection.md  dynamic_routing.md  features.md  first_steps.md  index.md  middleware.md  request.md  response.md  routers.md
examples/: example.py  middleware.py
examples/routers/: item.py
search/: search_index.json
simpleapi/: README.md  __init__.py  core.py  custom_types.py  handler.py  request.py  response.py  router.py  simpleapi.py  utils.py
tests/: app.py  middleware.py  test.py
tests/routers/: item.py
