[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SimplestAPI"
version = "0.0.5"
authors = [
  { name="Adham Salama", email="adhamsalama@zohomail.com" },
]
description = "SimpleAPI is a minimalistic, unopinionated web framework for Python, inspired by FastAPI & Flask"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pydantic"
]

[project.urls]
"Homepage" = "https://github.com/adhamsalama/simpleapi"
"Bug Tracker" = "https://github.com/adhamsalama/simpleapi/issues"
