[tool.poetry]
name = "simplestapi"
version = "0.0.5"
description = "SimpleAPI is a minimalistic, unopinionated web framework for Python, inspired by FastAPI & Flask"
authors = ["Adham Salama <adham.salama@zohomail.com>"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    {include = "simpleapi"}
]
homepage = "https://github.com/adhamsalama/simpleapi"
repository = "https://github.com/adhamsalama/simpleapi"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/adhamsalama/simpleapi/issues"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
