[tool.poetry]
name = "simplestapi"
version = "0.1.5"
description = "SimpleAPI is a minimalistic, unopinionated web framework for Python, inspired by FastAPI & Flask"
authors = ["Adham Salama <adham.salama@zohomail.com>"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    {include = "simpleapi"}
]
homepage = "https://adhamsalama.github.io/simpleapi"
repository = "https://github.com/adhamsalama/simpleapi"
readme = "README.md"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/adhamsalama/simpleapi/issues"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
requests = "^2.28.1"
mypy = "^0.971"
types-requests = "^2.28.8"
gunicorn = "^20.1.0"
mkdocs-material = "^8.4.1"
yasta = "^0.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[yasta-tasks]
typecheck = "mypy ."
test   = "gunicorn tests.app:app & pytest tests/test.py && kill -9 $(lsof -t -i:8000)"     
fulltest = ["typecheck", "test"]